#125: Got profile for Spark 3.3 running (#126)