@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.exasol</groupId>
     <artifactId>spark-connector</artifactId>
-    <version>1.2.2</version>
+    <version>1.2.3</version>
     <name>The Spark Exasol Connector</name>
     <description>A connector for Apache Spark to access Exasol</description>
     <url>https://github.com/exasol/spark-connector/</url>
@@ -23,13 +22,6 @@
             <url>https://maven.exasol.com/artifactory/exasol-releases</url>
             <snapshots>
                 <enabled>false</enabled>
-            </snapshots>
-        </repository>
-        <repository>
-            <id>maven.exasol.com-snapshots</id>
-            <url>https://maven.exasol.com/artifactory/exasol-snapshots</url>
-            <snapshots>
-                <enabled>true</enabled>
             </snapshots>
         </repository>
     </repositories>
@@ -185,7 +177,7 @@
         <dependency>
             <groupId>io.netty</groupId>
             <artifactId>netty-all</artifactId>
-            <version>4.1.82.Final</version>
+            <version>4.1.84.Final</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
@@ -296,6 +288,12 @@
         </dependency>
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-api</artifactId>
+            <version>2.19.0</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-1.2-api</artifactId>
             <version>2.19.0</version>
             <scope>test</scope>
@@ -309,7 +307,7 @@
         <dependency>
             <groupId>com.exasol</groupId>
             <artifactId>test-db-builder-java</artifactId>
-            <version>3.3.4</version>
+            <version>3.4.0</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -321,8 +319,19 @@
         <dependency>
             <groupId>com.exasol</groupId>
             <artifactId>exasol-testcontainers</artifactId>
-            <version>6.2.0</version>
+            <version>6.3.0</version>
             <scope>test</scope>
+        </dependency>
+        <!-- Dependencies that are forced higher to fix vulnerabilities -->
+        <dependency>
+            <groupId>com.google.protobuf</groupId>
+            <artifactId>protobuf-java</artifactId>
+            <version>3.21.8</version><!-- fixes sonatype-2022-5732 -->
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-text</artifactId>
+            <version>1.10.0</version><!-- fixes sonatype-2022-5732 -->
         </dependency>
     </dependencies>
     <build>
@@ -330,7 +339,7 @@
             <plugin>
                 <groupId>net.alchim31.maven</groupId>
                 <artifactId>scala-maven-plugin</artifactId>
-                <version>4.6.3</version>
+                <version>4.7.2</version>
                 <executions>
                     <execution>
                         <id>scala-compile-first</id>
@@ -393,7 +402,7 @@
                         <compilerPlugin>
                             <groupId>org.scalameta</groupId>
                             <artifactId>semanticdb-scalac_${scala.version}</artifactId>
-                            <version>4.5.6</version>
+                            <version>4.5.11</version>
                         </compilerPlugin>
                     </compilerPlugins>
                 </configuration>
@@ -418,11 +427,14 @@
             <plugin>
                 <groupId>org.scalatest</groupId>
                 <artifactId>scalatest-maven-plugin</artifactId>
-                <version>2.0.2</version>
+                <version>2.2.0</version>
                 <configuration>
                     <junitxml>.</junitxml>
                     <filereports>TestSuite.txt</filereports>
-                    <argLine>-Djava.util.logging.config.file=src/test/resources/logging.properties ${argLine}</argLine>
+                    <argLine>-Djava.util.logging.config.file=src/test/resources/logging.properties
+                        --add-opens=java.base/sun.nio.ch=ALL-UNNAMED
+                        --add-opens=java.base/sun.util.calendar=ALL-UNNAMED
+                        ${argLine}</argLine>
                     <reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
                 </configuration>
                 <executions>
@@ -464,7 +476,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
-                <version>3.3.0</version>
+                <version>3.4.0</version>
                 <executions>
                     <execution>
                         <phase>package</phase>
@@ -506,36 +518,28 @@
                 <artifactId>ossindex-maven-plugin</artifactId>
                 <configuration>
                     <excludeVulnerabilityIds>
+                        <!-- excluded vulnerabilities for profile spark 3.3 -->
+                        <!-- XXE attack in command line tool "hdfs ec"; not used by the connector -->
+                        <exclude>sonatype-2022-5732</exclude>
+                        <!-- Same root cause as above, but according to HADOOP-18469 does not result in known issue -->
+                        <exclude>sonatype-2022-5820</exclude>
+
                         <!-- excluded vulnerabilities for profile spark3.2 -->
                         <!-- Building with Spark3.2 and Scala 2.12 and Exasol 7.1.10 -->
-
                         <!-- io.netty:netty-handler:jar:4.1.77.Final is provided by arrow-vector ... spark-catalyst ... spark-core. Currently no update available. As potential attackers cannot manipulate the URL, the developers decided to accept the risk for now. -->
                         <exclude>sonatype-2020-0026</exclude>
                         <!-- com.google.protobuf:protobuf-java:jar:2.5.0 is provided by orc-core ... spark-sql ... spark-core. Currently no update available. -->
                         <exclude>CVE-2021-22569</exclude>
                         <!-- com.google.guava:guava:jar:31.1-jre: Currently no update available. Risk does not apply, as potential attackers cannot access the temp directory. -->
                         <exclude>sonatype-2020-0926</exclude>
-
                         <!-- excluded vulnerabilities for profile spark3.1 -->
                         <!-- building with Spark3.1 and Scala 2.12 and Exasol 7.1.10 -->
-
                         <!-- com.fasterxml.jackson.core:jackson-databind:jar:2.10.5.1 provided by spark-core. Currently no update available. -->
                         <exclude>CVE-2020-36518</exclude>
                         <exclude>sonatype-2021-4682</exclude>
                         <!-- org.apache.spark:spark-core_2.12:jar:3.1.3. Currently no update available. -->
                         <exclude>sonatype-2022-1694</exclude>
                         <exclude>CVE-2022-25168</exclude>
-
-                        <!-- excluded vulnerabilities for profile spark2.4 -->
-                        <!-- building with Spark2.4 and Scala 2.12 and Exasol 7.1.10 -->
-
-                        <!-- commons-codec:commons-codec:jar:1.9 provided by spark-catalyst ... spark-sql. Currently no update available. -->
-                        <exclude>sonatype-2012-0050</exclude>
-                        <!-- org.apache.spark:spark-core_2.12:jar:2.4.8. Currently no update available. -->
-                        <exclude>CVE-2022-33891</exclude>
-                        <exclude>sonatype-2022-2430</exclude>
-                        <!-- org.apache.spark:spark-network-common_2.12. Currently no update available. -->
-                        <exclude>CVE-2021-38296</exclude>
                     </excludeVulnerabilityIds>
                 </configuration>
             </plugin>
@@ -613,7 +617,7 @@
             <plugin>
                 <groupId>org.itsallcode</groupId>
                 <artifactId>openfasttrace-maven-plugin</artifactId>
-                <version>1.5.0</version>
+                <version>1.6.1</version>
                 <executions>
                     <execution>
                         <id>trace-requirements</id>
@@ -654,7 +658,7 @@
             <plugin>
                 <groupId>com.diffplug.spotless</groupId>
                 <artifactId>spotless-maven-plugin</artifactId>
-                <version>2.22.8</version>
+                <version>2.24.0</version>
                 <configuration>
                     <scala>
                         <scalafmt>
@@ -694,10 +698,19 @@
     </build>
     <profiles>
         <profile>
-            <id>spark3.2</id>
+            <id>spark3.3</id>
             <activation>
                 <activeByDefault>true</activeByDefault>
             </activation>
+            <properties>
+                <spark.version>3.3.1</spark.version>
+                <scala.version>2.13.10</scala.version>
+                <scala.compat.version>2.13</scala.compat.version>
+                <jackson.version>2.13.4.2</jackson.version>
+            </properties>
+        </profile>
+        <profile>
+            <id>spark3.2</id>
             <properties>
                 <spark.version>3.2.2</spark.version>
                 <scala.version>2.13.8</scala.version>
@@ -714,35 +727,11 @@
                 <jackson.version>2.10.5.1</jackson.version>
             </properties>
         </profile>
-        <profile>
-            <id>spark2.4</id>
-            <properties>
-                <spark.version>2.4.8</spark.version>
-                <scala.version>2.12.10</scala.version>
-                <scala.compat.version>2.12</scala.compat.version>
-                <jackson.version>2.11.4</jackson.version>
-            </properties>
-            <dependencies>
-                <dependency>
-                    <groupId>com.fasterxml.jackson.module</groupId>
-                    <artifactId>jackson-module-scala_2.12</artifactId>
-                    <version>2.11.4</version>
-                    <scope>test</scope>
-                </dependency>
-            </dependencies>
-        </profile>
-        <profile>
-            <id>scala2.12</id>
-            <properties>
-                <scala.version>2.12.15</scala.version>
-                <scala.compat.version>2.12</scala.compat.version>
-            </properties>
-        </profile>
     </profiles>
     <parent>
         <artifactId>spark-connector-generated-parent</artifactId>
         <groupId>com.exasol</groupId>
-        <version>1.2.2</version>
+        <version>1.2.3</version>
         <relativePath>pk_generated_parent.pom</relativePath>
     </parent>
 </project>
